--- a/styles/components/_lawAndPolicy.scss
+++ b/styles/components/_lawAndPolicy.scss
@@ -12,11 +12,10 @@
   align-self: stretch;
   flex-grow: 0;
 
-
   .lawPolicyTitle {
     width: fit-content;
     height: 28px;
-    font-family: "Product Sans", sans-serif;
+    font-family: "Ek Mukta";
     font-style: normal;
     font-weight: 700;
     font-size: 24px;
@@ -30,7 +29,7 @@
   .lawPolicyViewAllButton {
     width: fit-content;
     height: 22px;
-    font-family: "Product Sans", sans-serif;
+    font-family: "Ek Mukta";
     font-style: normal;
     font-weight: 400;
     font-size: 16px;
@@ -52,7 +51,6 @@
   height: 318px;
   flex: none;
   align-self: stretch;
-
 
   .lawPolicyCard {
     display: flex;
@@ -77,7 +75,7 @@
       border-radius: 6px;
       overflow: hidden;
 
-      .image{
+      .image {
         height: 100%;
         width: auto;
       }
@@ -89,7 +87,7 @@
       justify-content: flex-start;
       align-items: flex-start;
       gap: 6px;
-      width: calc(209*100%/345);
+      width: calc(209 * 100% / 345);
       height: 100%;
 
       .blogCategoryTitle {
@@ -107,7 +105,7 @@
           font-size: 10px;
           line-height: 140%;
           text-transform: uppercase;
-          color: #4F4F4F;
+          color: #4f4f4f;
         }
       }
 
@@ -166,11 +164,10 @@
     align-self: stretch;
     flex-grow: 0;
 
-
     .lawPolicyTitle {
       width: fit-content;
       height: 28px;
-      font-family: "Product Sans", sans-serif;
+      font-family: "Ek Mukta";
       font-style: normal;
       font-weight: 700;
       font-size: 24px;
@@ -196,7 +193,6 @@
     }
   }
 
-
   .lawPolicyCardDiv {
     display: flex;
     flex-direction: row;
@@ -209,7 +205,6 @@
     flex: none;
     align-self: stretch;
     flex-grow: 0;
-
 
     .lawPolicyCard {
       display: flex;
@@ -231,7 +226,6 @@
         height: fit-content;
 
         .blogCategoryTitle {
-
           p {
             color: #0000ff;
           }
