--- a/styles/layout/_blogNavbar.scss
+++ b/styles/layout/_blogNavbar.scss
@@ -25,7 +25,6 @@ select:focus {
   margin: 0px;
   padding: 0;
 
-
   .navbarContainer {
     display: flex;
     flex-direction: column;
@@ -37,7 +36,6 @@ select:focus {
     width: 100%;
     border: solid 1px white;
 
-
     @media only screen and (min-width: 1024px) {
       display: flex;
       flex-direction: row;
@@ -45,22 +43,25 @@ select:focus {
       width: 100%;
     }
 
-
     .navbarTop {
       display: flex;
       flex-direction: row;
       gap: 32px;
       width: fit-content;
       border: solid 1px white;
+      width: 100%;
 
-
-      ul {
+      .navbarTopContents {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        width: 100%;
         justify-content: space-between;
 
         .invi-item {
           display: none;
 
-          @media only screen and (min-width :768px) {
+          @media only screen and (min-width: 768px) {
             display: inline;
           }
         }
@@ -81,8 +82,6 @@ select:focus {
             flex-grow: 0;
             padding: 0px;
           }
-
-
 
           ul {
             background-color: #001338;
@@ -134,8 +133,6 @@ select:focus {
         position: relative;
         width: fit-content;
 
-
-
         .searchSection {
           width: 100%;
           position: relative;
@@ -173,8 +170,6 @@ select:focus {
           flex-direction: row;
           align-items: center;
           position: relative;
-
-
 
           .languageSelect {
             font-family: "Product Sans", sans-serif;
