--- a/styles/layout/_blogNavbar.scss
+++ b/styles/layout/_blogNavbar.scss
@@ -35,7 +35,6 @@ select:focus {
     border-radius: 0px;
     justify-content: space-between;
     width: 100%;
-    border: solid 1px white;
 
 
     @media only screen and (min-width: 1024px) {
@@ -49,18 +48,25 @@ select:focus {
     .navbarTop {
       display: flex;
       flex-direction: row;
-      gap: 32px;
-      width: fit-content;
-      border: solid 1px white;
+      width: 100%;
+      @media only screen and (min-width :1024px) {
+        width: fit-content;
+        min-width: calc(675*100%/1440);
+      }
+      
 
 
       ul {
+        width: 100%;
         justify-content: space-between;
+        @media only screen and (min-width :768px) {
+          gap: 32px;
+        }
 
         .invi-item {
           display: none;
 
-          @media only screen and (min-width :768px) {
+          @media only screen and (min-width :710px) {
             display: inline;
           }
         }
@@ -69,7 +75,7 @@ select:focus {
           a {
             // width: 70px;
             // height: 20px;
-            font-family: "Product Sans", sans-serif;
+            font-family: "Ek Mukta";
             font-style: normal;
             font-weight: 400;
             font-size: 14px;
@@ -122,8 +128,11 @@ select:focus {
     .navbarBottom {
       padding: 0px;
       margin: 0px;
-      width: fit-content;
-      border: solid 1px white;
+      width: 100%;
+      @media only screen and (min-width: 1024px) {
+        min-width: calc(448*100%/1440);
+        width: fit-content;
+      }
 
       form {
         display: flex;
@@ -132,7 +141,8 @@ select:focus {
         align-items: center;
         justify-content: space-between;
         position: relative;
-        width: fit-content;
+        width: 100%;
+        
 
 
 
