--- a/styles/pages/_id.scss
+++ b/styles/pages/_id.scss
@@ -30,7 +30,7 @@
     align-items: center;
     min-width: 100vw;
     height: fit-content;
-    background-color: #d9d9d9;
+    background-color: #ffffff;
 
     .blogSecNavBlend {
       height: 105.5px;
@@ -429,6 +429,7 @@
       position: relative;
       width: 100%;
       top: 67px;
+      background-color: #ffffff;
 
       .blogSecNavBlend {
         height: 71px;
@@ -441,7 +442,7 @@
       .footerBlend {
         position: absolute;
         width: 100%;
-        height: 435px;
+        height: 435.5px;
         background: #4f4f4f;
         bottom: 0px;
 
