--- a/styles/pages/_blogDetails.scss
+++ b/styles/pages/_blogDetails.scss
@@ -32,8 +32,8 @@
     align-items: center;
     min-width: 100vw;
     height: fit-content;
-    background-color: #d9d9d9;
-
+    background-color: #ffffff;
+    
     .blogSecNavBlend {
       height: 105.5px;
       width: 100%;
@@ -535,7 +535,7 @@
       .footerBlend {
         position: absolute;
         width: 100%;
-        height: 435px;
+        height: 435.5px;
         background: #4f4f4f;
         bottom: 0px;
 
