--- a/styles/pages/_homePage.scss
+++ b/styles/pages/_homePage.scss
@@ -32,7 +32,7 @@
     align-items: center;
     min-width: 100vw;
     height: fit-content;
-    background-color: lightgray;
+    background-color: #ffffff;
 
     .secNavBlend {
       height: 105.5px;
@@ -993,8 +993,7 @@
       align-items: center;
       min-width: 100vw;
       height: fit-content;
-      background-color: lightgray;
-
+      background-color: #ffffff;
 
       .footerBlend {
         position: absolute;
