--- a/styles/components/_bottomComponent.scss
+++ b/styles/components/_bottomComponent.scss
@@ -9,6 +9,24 @@
         width: 120px;
         height: 100%;
         overflow: hidden;
+        position: relative;
+
+        .hover {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            background: linear-gradient(0deg, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4));
+            border-radius: 6px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            z-index: 2;
+
+            .playButton {
+                width: fit-content;
+                height: fit-content;
+            }
+        }
 
         .image {
             width: 100%;
