--- a/styles/pages/_id.scss
+++ b/styles/pages/_id.scss
@@ -200,6 +200,8 @@
                     font-size: 16px;
                     line-height: 140%;
                     color: #4f4f4f;
+                    width: 121px;
+                    justify-content: center;
                   }
 
                   .ant-select-selector {
