--- a/styles/pages/_id.scss
+++ b/styles/pages/_id.scss
@@ -383,6 +383,14 @@
               height: 223px;
               background-color: #d9d9d9;
               z-index: 0;
+              display: flex;
+              justify-content: center;
+              align-items: center;
+              font-family: "Product Sans";
+              font-style: normal;
+              font-weight: 400;
+              font-size: 16px;
+              line-height: 140%;
             }
 
             .rightSidebar {
@@ -539,12 +547,20 @@
               overflow: hidden;
 
               .blogAdDiv {
-                display: block;
+                // display: block;
                 position: relative;
                 width: 100%;
                 height: 279px;
                 background-color: #d9d9d9;
                 z-index: 0;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                font-family: "Product Sans";
+                font-style: normal;
+                font-weight: 400;
+                font-size: 16px;
+                line-height: 140%;
               }
 
               .rightSidebar {
