--- a/styles/pages/_homePage.scss
+++ b/styles/pages/_homePage.scss
@@ -2034,7 +2034,7 @@
 
           .blogPreviewDiv {
             position: relative;
-            height: 500px;
+            height: fit-content;
             width: 100%;
             display: flex;
             flex-direction: row;
@@ -2043,8 +2043,8 @@
             overflow: visible;
 
             .bigComponent {
-              height: 100%;
-              overflow: hidden;
+              height: 500px;
+              overflow: visible;
               width: calc(637.5 * 100% / 1280);
               min-width: calc(637.5 * 100% / 1280);
               min-height: 100%;
@@ -2057,14 +2057,14 @@
               align-items: center;
               flex-wrap: wrap;
               gap: calc(5 * 100% / 637.5);
-              height: 100%;
+              height: 500px;
               width: fit-content;
               min-width: calc(637.5 * 100% / 1280);
               min-height: 100%;
-              overflow: hidden;
+              overflow: visible;
 
               .smallComponent {
-                height: 250px;
+                height: 247px;
                 width: calc(316 * 100% / 637.5);
                 min-height: calc(637.5 * 100% / 1280);
                 overflow: hidden;
@@ -2913,7 +2913,7 @@
 .propertCardDiv::-webkit-scrollbar {
   // width: 12px;
   height: 2px;
-  display: none;
+  // display: none;
 }
 
 .propertCardDiv::-webkit-scrollbar-track {
