different component all

--- a/styles/pages/_homePage.scss
+++ b/styles/pages/_homePage.scss
@@ -265,6 +265,9 @@
               line-height: 140%;
               color: #333333;
               cursor: pointer;
+              // :hover{
+              //   text-decoration: underline;
+              // }
             }
           }
 
