--- a/styles/pages/_homePage.scss
+++ b/styles/pages/_homePage.scss
@@ -2046,7 +2046,7 @@
             overflow: visible;
 
             .bigComponent {
-              height: 500px;
+              height: 100%;
               overflow: visible;
               width: calc(637.5 * 100% / 1280);
               min-width: calc(637.5 * 100% / 1280);
@@ -2064,10 +2064,10 @@
               width: fit-content;
               min-width: calc(637.5 * 100% / 1280);
               min-height: 100%;
-              overflow: visible;
+              overflow:hidden;
 
               .smallComponent {
-                height: 247px;
+                height: 245px;
                 width: calc(316 * 100% / 637.5);
                 min-height: calc(637.5 * 100% / 1280);
                 overflow: hidden;
