--- a/styles/components/_lifeStyle.scss
+++ b/styles/components/_lifeStyle.scss
@@ -99,7 +99,7 @@
         font-style: normal;
         font-weight: 400;
         font-size: 10px;
-        line-height: 140%;
+        line-height: 150%;
         text-transform: uppercase;
         color: #ffffff;
         height: fit-content;
@@ -121,7 +121,7 @@
         font-style: normal;
         font-weight: 700;
         font-size: 16px;
-        line-height: 140%;
+        line-height: 150%;
         color: #ffffff;
         overflow: hidden;
         text-overflow: ellipsis;
@@ -131,7 +131,7 @@
         -webkit-box-orient: vertical;
         margin: 0px;
         padding: 0px;
-        height: 40px;
+        height: 44px;
       }
     }
     .blogBy {
@@ -146,8 +146,11 @@
         font-family: "Ek Mukta";
         font-style: normal;
         font-weight: 400;
-        font-size: 14px;
-        line-height: 140%;
+        font-size: 13px;
+        @media only screen and (min-width: 1024px) {
+          font-size: 14px;
+        }
+        line-height: 150%;
         color: #ffffff;
       }
 
