--- a/styles/components/_bottomComponent.scss
+++ b/styles/components/_bottomComponent.scss
@@ -50,7 +50,7 @@
             font-style: normal;
             font-weight: 700;
             font-size: 16px;
-            line-height: 140%;
+            line-height: 150%;
             color: #333333;
             display: -webkit-box;
             -webkit-line-clamp: 2;
@@ -62,8 +62,11 @@
             font-family: 'Ek Mukta';
             font-style: normal;
             font-weight: 400;
-            font-size: 14px;
-            line-height: 140%;
+            font-size: 13px;
+            @media only screen and (min-width: 1024px) {
+                font-size: 14px;
+              }
+            line-height: 150%;
             color: #4F4F4F;
         }
     }
