--- a/styles/components/_homeBlogTypeMain.scss
+++ b/styles/components/_homeBlogTypeMain.scss
@@ -113,12 +113,13 @@
       flex-wrap: wrap;
       justify-content: center;
       align-items: flex-start;
+      height: fit-content;
 
       p {
         font-family: "Ek Mukta";
         font-style: normal;
         font-weight: 700;
-        font-size: 14px;
+        font-size: 16px;
         line-height: 150%;
         color: #ffffff;
         overflow: hidden;
@@ -129,6 +130,8 @@
         -webkit-box-orient: vertical;
         margin: 0px;
         padding: 0px;
+        min-height: 42px;
+        height: fit-content;
       }
     }
     .blogBy {
@@ -143,7 +146,7 @@
         font-family: "Ek Mukta";
         font-style: normal;
         font-weight: 400;
-        font-size: 14px;
+        font-size: 13px;
         line-height: 140%;
         color: #ffffff;
       }
@@ -181,6 +184,7 @@
       .blogBy {
         .author,
         .posted {
+          font-size: 14px;
         }
 
         .separator {
