--- a/styles/components/_featuredProperties.scss
+++ b/styles/components/_featuredProperties.scss
@@ -15,7 +15,7 @@
     height: 102px;
     border-radius: 3px;
     overflow: hidden;
-    @media only screen and (min-width: 1024px){
+    @media only screen and (min-width: 1024px) {
       height: 105px;
     }
 
@@ -24,6 +24,7 @@
       height: 102px;
       border-radius: inherit;
       object-fit: contain;
+      transition: 0.3s ease-in-out;
       // border-radius: 3px;
     }
   }
@@ -85,7 +86,6 @@
       min-width: 100%;
       width: fit-content;
       overflow: hidden;
-      
 
       .overviewDatas {
         position: relative;
@@ -95,10 +95,10 @@
         width: fit-content;
         height: min-content;
         gap: 8px;
-        @media only screen and (min-width: 1024px){
+        @media only screen and (min-width: 1024px) {
           gap: 4px;
         }
-        @media only screen and (min-width: 1100px){
+        @media only screen and (min-width: 1100px) {
           gap: 8px;
         }
 
@@ -145,10 +145,10 @@
             width: auto;
             word-spacing: 2px;
             gap: 8px;
-            @media only screen and (min-width: 1024px){
+            @media only screen and (min-width: 1024px) {
               font-size: 11px;
             }
-            @media only screen and (min-width: 1050px){
+            @media only screen and (min-width: 1050px) {
               font-size: 12px;
             }
           }
@@ -185,6 +185,27 @@
         color: #0000ff;
         // word-spacing: -3px;
         word-spacing: 2px;
+      }
+    }
+  }
+
+  &:hover {
+    .imageContainer {
+      .image {
+        transform: scale(1.1);
+      }
+    }
+
+    .contentContainer {
+      .propertyTitle {
+        p {
+          text-decoration: underline;
+        }
+      }
+      .propertyAddress {
+        p {
+          text-decoration: underline;
+        }
       }
     }
   }
