--- a/styles/components/_relatedBlogs.scss
+++ b/styles/components/_relatedBlogs.scss
@@ -12,12 +12,15 @@
     height: 90px;
     background: transparent;
     border-radius: 6px;
+    max-width: 120px;
+    overflow: hidden;
 
-    .relatedBlogsImage {
+    .relatedBlogImages {
       // max-width: 100%;
       width: auto;
       height: 100%;
       border-radius: 6px;
+      transition: 0.3s ease-in-out;
     }
   }
 
@@ -59,6 +62,19 @@
         -webkit-box-orient: vertical;
         margin: 0px;
         padding: 0px;
+      }
+    }
+  }
+  &:hover {
+    .imageContainer {
+      .relatedBlogImages {
+        transform: scale(1.1);
+        // transition: 1s ease-in-out;
+      }
+    }
+    .contentContainer {
+      .blogHeader {
+        text-decoration: underline;
       }
     }
   }
